[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/small_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/Command.gd" type="Script" id=2]

[node name="Command" type="PanelContainer"]
margin_right = 298.0
margin_bottom = 256.0
rect_min_size = Vector2( 150, 100 )
rect_clip_content = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Highlight" type="Panel" parent="."]
visible = false
modulate = Color( 0.101961, 0.941176, 0.784314, 0.831373 )
margin_left = 7.0
margin_top = 7.0
margin_right = 513.0
margin_bottom = 176.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 295.0
margin_bottom = 249.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
margin_right = 64.0
margin_bottom = 242.0
rect_min_size = Vector2( 64, 64 )
mouse_filter = 2
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 68.0
margin_right = 288.0
margin_bottom = 242.0
rect_min_size = Vector2( 220, 0 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 220.0
margin_bottom = 14.0
text = "Command name"

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 220.0
margin_bottom = 22.0
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 220.0
margin_bottom = 242.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 1 )
text = "Testing test stuff to make sure it works
that works
hwo about this?
And this
tasta
asdfa
asdfasdf
asdfasdf
asdfasdf
and this
"
fit_content_height = true

[node name="Timer" type="Timer" parent="."]
[connection signal="resized" from="." to="." method="_on_Command_resized"]
[connection signal="visibility_changed" from="Highlight" to="." method="_on_Highlight_visibility_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
